@@ -1,6 +1,7 @@
 package de.gooddragon.jederkilometer.domain.service;
 
 import de.gooddragon.jederkilometer.domain.model.Aufzeichnung;
+import de.gooddragon.jederkilometer.domain.model.Sportart;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -26,7 +27,7 @@ public class KMBerechnungTests {
     @Test
     @DisplayName("Berechnung der Gesamt-Kilometer")
     void test_01() {
-        List<Aufzeichnung> activities = Arrays.asList(
+        List<Aufzeichnung> activities = List.of(
                 new Aufzeichnung(UUID.randomUUID(), 10.0, LocalDate.now(), UUID.randomUUID()),
                 new Aufzeichnung(UUID.randomUUID(), 15.0, LocalDate.now(), UUID.randomUUID())
         );
@@ -47,7 +48,7 @@ public class KMBerechnungTests {
         Set<UUID> team = Set.of(sportler1, sportler3);
 
 
-        List<Aufzeichnung> activities = Arrays.asList(
+        List<Aufzeichnung> activities = List.of(
                 new Aufzeichnung(UUID.randomUUID(), 10.0, LocalDate.now(), sportler1),
                 new Aufzeichnung(UUID.randomUUID(), 15.0, LocalDate.now(), sportler2),
                 new Aufzeichnung(UUID.randomUUID(), 20.0, LocalDate.now(), sportler3)
@@ -65,7 +66,7 @@ public class KMBerechnungTests {
     @DisplayName("Berechnung der Gesamt-Kilometer pro Sportart")
     void test_03() {
         UUID sportart = UUID.randomUUID();
-        List<Aufzeichnung> activities = Arrays.asList(
+        List<Aufzeichnung> activities = List.of(
                 new Aufzeichnung(sportart, 10.0, LocalDate.now(), UUID.randomUUID()),
                 new Aufzeichnung(UUID.randomUUID(), 15.0, LocalDate.now(), UUID.randomUUID())
         );
@@ -82,7 +83,7 @@ public class KMBerechnungTests {
     @DisplayName("Berechnung der Gesamt-Kilometer pro Tag")
     void test_04() {
         LocalDate datum = LocalDate.of(2025, 4, 24);
-        List<Aufzeichnung> activities = Arrays.asList(
+        List<Aufzeichnung> activities = List.of(
                 new Aufzeichnung(UUID.randomUUID(), 10.0, datum, UUID.randomUUID()),
                 new Aufzeichnung(UUID.randomUUID(), 15.0, datum.plusDays(1), UUID.randomUUID())
         );
@@ -90,5 +91,52 @@ public class KMBerechnungTests {
         double result = kmBerechnung.berechneGesamtKmProTag(activities, datum);
 
         assertThat(result).isEqualTo(10.0);
+    }
+
+    @Test
+    @DisplayName("Berechnung der aktiven Gesamt-Kilometer")
+    void test_05() {
+        UUID sportart1 = UUID.randomUUID();
+        UUID sportart2 = UUID.randomUUID();
+
+        List<Sportart> activeSports = List.of(
+                new Sportart(sportart1, "Laufen", 0.6, "Laufen",true),
+                new Sportart(sportart2, "Radfahren", 0.25, "Rad", true)
+        );
+
+        List<Aufzeichnung> activities = List.of(
+                new Aufzeichnung(sportart1, 10.0, LocalDate.now(), UUID.randomUUID()),
+                new Aufzeichnung(sportart2, 20.0, LocalDate.now(), UUID.randomUUID())
+        );
+
+        when(activityFilterMock.filterActivitiesByActiveSportart(activities, activeSports))
+                .thenReturn(activities);
+
+        double result = kmBerechnung.berechneAktiveGesamtKm(activities, activeSports);
+
+        assertThat(result).isEqualTo(30.0);
+    }
+
+    @Test
+    @DisplayName("Berechnung der Gesamt-Kilometer pro Kategorie")
+    void test_06() {
+        UUID sportart1 = UUID.randomUUID();
+        UUID sportart2 = UUID.randomUUID();
+
+        Set<UUID> kategorie = Set.of(sportart1, sportart2);
+
+        List<Aufzeichnung> activities = Arrays.asList(
+                new Aufzeichnung(sportart1, 10.0, LocalDate.now(), UUID.randomUUID()),
+                new Aufzeichnung(sportart2, 15.0, LocalDate.now(), UUID.randomUUID())
+        );
+
+        when(activityFilterMock.filterActivitiesBySportart(activities, sportart1))
+                .thenReturn(Collections.singletonList(activities.get(0)));
+        when(activityFilterMock.filterActivitiesBySportart(activities, sportart2))
+                .thenReturn(Collections.singletonList(activities.get(1)));
+
+        double result = kmBerechnung.berechneGesamtKmProKategorie(activities, kategorie);
+
+        assertThat(result).isEqualTo(25.0);
     }
 }
